[package]
name = "puremp3"
version = "0.1.0"
edition = "2018"
description = "MP3 decoding in pure Rust"
authors = ["Mike Welsh <mwelsh@gmail.com>"]
repository = "https://github.com/Herschel/puremp3"
readme = "README.md"
categories = ["audio", "mp3"]
license = "MIT OR Apache-2.0"

[dependencies]
bitstream-io = "0.8.2"
byteorder = "1.3.1"
lazy_static = "1.3.0"

[dev-dependencies]
# Used by plackback example
cpal = "0.8"
sample = "0.10"