[package]
name = "puremp3"
version = "0.1.0"
edition = "2018"
description = "MP3 decoding in pure Rust"
authors = ["Mike Welsh <mwelsh@gmail.com>"]
repository = "https://github.com/Herschel/puremp3"
readme = "README.md"
categories = ["multimedia::audio", "multimedia::encoding"]
license = "MIT OR CC0-1.0"

[badges]
circle-ci = { repository = "Herschel/puremp3" }

[dependencies]
bitstream-io = "0.8.2"
byteorder = "1.3.1"

[dev-dependencies]
# Used by plackback example
cpal = "0.8"
sample = "0.10"